# watchman_cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: c-cpp.yml
accomodation/: Dockerfile  watchman_cpp-el9.spec
accomodation/build_rpm/: Dockerfile  README.md  build_rpm.sh  docker_build_image.sh  docker_run.sh
accomodation/etc/: watchman_cpp.logrotate  watchman_cpp.rsyslog  watchman_cpp.systemd  watchman_cpp_config.json
images/: create_images.sh
images/courses/cpp/: CMakeLists.txt  Dockerfile  build_image.sh  run-playground.sh  run.sh
images/courses/golang/: Dockerfile  run.sh
images/courses/haskell/: build_image.sh  run.sh
images/courses/python/: Dockerfile  run.sh
images/courses/rust/: build_image.sh  run.sh
images/cpp/: CMakeLists.txt  Dockerfile  build_image.sh
images/cpp/playground/: run-playground.sh
images/cpp/task/: run-task.sh  ut.hpp
images/golang/: Dockerfile  build_image.sh  run.sh
images/golang/playground/: run-playground.sh
images/golang/task/: run-task.sh
images/haskell/: Dockerfile  build_image.sh  package.yaml  run.sh
images/haskell/playground/: run-playground.sh
images/haskell/task/: run-task.sh
images/playground/cpp/: Dockerfile  build_image.sh  run.sh
images/playground/golang/: Dockerfile  build_image.sh  run.sh
images/playground/haskell/: Dockerfile  build_image.sh  config.yaml  run.sh
images/playground/python/: Dockerfile  build_image.sh  run.sh  run_playground.sh
images/playground/rust/: Dockerfile  build_image.sh  run.sh
images/practice/python/: Dockerfile  build_image.sh  run.sh
images/python/: Dockerfile  build_image.sh  run.sh
images/python/playground/: run-playground.sh
images/python/practice/: run-practice.sh
images/python/task/: run-task.sh
images/rust/: Dockerfile  build_image.sh  run.sh
images/rust/playground/: run-playground.sh
images/rust/task/: run-task.sh
src/: CMakeLists.txt  main.cpp
src/common/: answer_common.cpp  answer_common.hpp  api.hpp  common.cpp  common.hpp  config.cpp  config.hpp  containers.cpp  containers.hpp  docker_end_answer.cpp  docker_end_answer.hpp  logging.cpp  logging.hpp  playground.cpp  process_courses.cpp  process_playground.cpp  project.cpp  project.hpp  run_params.hpp  tar_to_stream.h  tar_to_stream.hpp
src/common/detail/: answer_common.cpp  answer_common.hpp  containers.cpp  containers.hpp  docker_end_answer.hpp  process_courses.cpp  process_playground.cpp  process_practice.cpp  project_utils.cpp  project_utils.hpp
src/common/tar/: conversions.hpp  header.hpp  tar_creator.hpp  tar_info.hpp  tar_to_stream.hpp  utils.hpp
src/common/tar/detail/: consts.hpp  conversions.hpp  header.hpp  tar_to_stream.hpp  utils.hpp
src/core/: container_manipulator.hpp  directory_passer.cpp  directory_traverser.cpp  docker_wrapper.cpp  docker_wrapper.hpp  folder_passer.cpp  parser.cpp  parser.hpp  service.cpp  service.hpp
src/core/code_launcher/: code_launcher_controller_interface.hpp  code_launcher_info.hpp  code_launcher_interface.hpp  code_launcher_provider_interface.hpp  code_launchers.hpp  response.hpp
src/core/code_launcher/detail/: callbacked_code_launcher.cpp  callbacked_code_launcher.hpp  code_launcher_controller.cpp  code_launchers.cpp  code_launchers.hpp  container_manipulator.cpp  container_manipulator.hpp  containers.cpp  containers.hpp  docker_end_answer.hpp  process_chapter.cpp  process_courses.cpp  process_playground.cpp  restarting_code_launcher.cpp  restarting_code_launcher.hpp  restarting_code_launcher_controller.cpp  restarting_code_launcher_controller.hpp  restarting_code_launcher_provider.cpp  restarting_code_launcher_provider.hpp  storage.hpp
src/core/detail/: container_manipulator.cpp  container_manipulator.hpp  data_run_prepare.cpp  data_run_prepare.hpp  directory_traverser.cpp
src/server/: parser.cpp  parser.hpp  server.cpp  server.hpp
src/server/detail/: server_impl.cpp  server_impl.hpp
tests/: CMakeLists.txt
tests/data/: config.json  cpp_modules.cpp  cpp_playground.json  cpp_playground_compile_error.json  example.tgz  files_structure.json  go_playground.json  haskell_playground.json  python_playground.json  rust_playground.json
tests/data/practice/: cpp_run.json  cpp_test.json  python_run.json  python_test.json
tests/docker_wrapper/: CMakeLists.txt  docker_wrapper_tests.cpp
tests/parser/: CMakeLists.txt  parser_tests.cpp
tests/service/: CMakeLists.txt  common.hpp  courses_tests.cpp  playground_tests.cpp  practice_tests.cpp  service_tests.cpp  tar_tests.cpp
